@@ -1,126 +1,173 @@
 package io.github.mikip98.humilityafm.content.blockentities.cabinetBlock;
 
+#if POLYMER && MC_VERSION < 12104 import eu.pb4.polymer.resourcepack.api.PolymerModelData; #endif
+#if POLYMER import eu.pb4.polymer.virtualentity.api.elements.ItemDisplayElement; #endif
+#if POLYMER import io.github.mikip98.humilityafm.mod_support.polymer.PolymerBlockEntities; #endif
+#if POLYMER import io.github.mikip98.humilityafm.mod_support.polymer.PolymerModelCache; #endif
 import io.github.mikip98.humilityafm.registries.BlockEntityRegistry;
-#if MC_VERSION >= 12105 && MC_VERSION < 260000
-import net.minecraft.block.Block;
-#endif
-#if MC_VERSION < 260000
-import net.minecraft.block.BlockState;
-import net.minecraft.block.entity.BlockEntity;
-import net.minecraft.block.entity.BlockEntityType;
-import net.minecraft.inventory.Inventories;
-import net.minecraft.inventory.SidedInventory;
-import net.minecraft.item.ItemStack;
-import net.minecraft.nbt.NbtCompound;
-import net.minecraft.network.listener.ClientPlayPacketListener;
-import net.minecraft.network.packet.Packet;
-import net.minecraft.network.packet.s2c.play.BlockEntityUpdateS2CPacket;
-#endif
-#if MC_VERSION >= 12006 && MC_VERSION < 260000
-import net.minecraft.registry.RegistryWrapper;
-#endif
-#if MC_VERSION >= 12108 && MC_VERSION < 260000
-import net.minecraft.storage.ReadView;
-import net.minecraft.storage.WriteView;
-#endif
-#if MC_VERSION < 260000
-import net.minecraft.util.collection.DefaultedList;
-import net.minecraft.util.math.BlockPos;
-import net.minecraft.util.math.Direction;
-#else
+#if !POLYMER import io.mikip98.humilityval.content.block.entity.AVLBlockEntity; #endif
+import io.mikip98.humilityval.content.block.entity.AVLDataInput;
+import io.mikip98.humilityval.content.block.entity.AVLDataOutput;
 import net.minecraft.core.BlockPos;
 import net.minecraft.core.Direction;
+#if MC_VERSION >= 12006 import net.minecraft.core.HolderLookup; #endif
+import net.minecraft.core.NonNullList;
+import net.minecraft.nbt.CompoundTag;
+import net.minecraft.network.protocol.Packet;
+import net.minecraft.network.protocol.game.ClientGamePacketListener;
+import net.minecraft.network.protocol.game.ClientboundBlockEntityDataPacket;
+#if MC_VERSION >= 12111 import net.minecraft.resources.Identifier; #endif
+#if MC_VERSION >= 12104 && MC_VERSION < 12111 import net.minecraft.resources.ResourceLocation; #endif
+import net.minecraft.world.WorldlyContainer;
+#if POLYMER import net.minecraft.world.item.ItemDisplayContext; #endif
 import net.minecraft.world.item.ItemStack;
-import net.minecraft.world.level.block.entity.BlockEntity;
 import net.minecraft.world.level.block.entity.BlockEntityType;
 import net.minecraft.world.level.block.state.BlockState;
-#endif
+#if POLYMER import net.minecraft.world.level.block.state.properties.BlockStateProperties; #endif
+import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
+#if POLYMER import org.joml.Quaternionf; #endif
+#if POLYMER import org.joml.Vector3f; #endif
 
-public class CabinetBlockEntity extends BlockEntity implements ImplementedInventory, SidedInventory {
-    private final DefaultedList<ItemStack> items = DefaultedList.ofSize(1, ItemStack.EMPTY);
+public class CabinetBlockEntity
+        extends #if POLYMER PolymerBlockEntities.PolymerBlockEntityBase #else AVLBlockEntity #endif
+        implements ImplementedInventory, WorldlyContainer {
+
+    protected final NonNullList<ItemStack> items = NonNullList.withSize(1, ItemStack.EMPTY);
+
+    #if POLYMER
+    protected final ItemDisplayElement cabinetDisplay = display;
+    protected final ItemDisplayElement storedItemDisplay = new ItemDisplayElement();
+    #endif
 
     public CabinetBlockEntity(BlockEntityType<?> type, BlockPos pos, BlockState state) {
-        super(type, pos, state);
+        super(type, pos, state #if POLYMER , PolymerProperties.of().ticking() #endif);
+
+        #if POLYMER
+        cabinetDisplay.setScale(new Vector3f(1.0045f));
+
+        storedItemDisplay.setItemDisplayContext(ItemDisplayContext.FIXED);
+        storedItemDisplay.setScale(new Vector3f(0.59375f));
+
+        cabinetDisplay.setLeftRotation(getCabinetRotation(state));
+        storedItemDisplay.setLeftRotation(getBaseRotation(state));
+
+        applyTranslations(state, cabinetDisplay, storedItemDisplay);
+
+        holder.addElement(storedItemDisplay);
+
+        boolean isOpen = state.getValue(BlockStateProperties.OPEN);
+        updateVisualState(isOpen);
+        #endif
     }
     public CabinetBlockEntity(BlockPos pos, BlockState state) {
-        super(BlockEntityRegistry.CABINET_BLOCK_ENTITY, pos, state);
+        this(BlockEntityRegistry.CABINET_BLOCK_ENTITY, pos, state);
     }
 
     // Required by ImplementedInventory
     @Override
-    public DefaultedList<ItemStack> getItems() {
+    public NonNullList<ItemStack> getItems() {
         return this.items;
     }
 
-    // Required for the stored item to show up
-    #if MC_VERSION < 12006
     @Override
-    public void readNbt(NbtCompound nbt) {
-        super.readNbt(nbt);
-        Inventories.readNbt(nbt, items);
-    }
-    @Override
-    public void writeNbt(NbtCompound nbt) {
-        Inventories.writeNbt(nbt, items);
-        super.writeNbt(nbt);
-    }
-    #elif MC_VERSION < 12108
-    @Override
-    public void readNbt(NbtCompound nbt, RegistryWrapper.WrapperLookup registryLookup) {
-        super.readNbt(nbt, registryLookup);
-        Inventories.readNbt(nbt, items, registryLookup);
-    }
-    @Override
-    public void writeNbt(NbtCompound nbt, RegistryWrapper.WrapperLookup registryLookup) {
-        Inventories.writeNbt(nbt, items, registryLookup);
-        super.writeNbt(nbt, registryLookup);
-    }
-    #else
-    @Override
-    protected void readData(ReadView view) {
-        super.readData(view);
-//        this.items.clear();  // TODO: Make sure this is indeed required to prevent ghost items on clients
-        Inventories.readData(view, this.items);
-    }
-    @Override
-    protected void writeData(WriteView view) {
-        Inventories.writeData(view, this.items, false);  // Make sure 'False' does not create ghost blocks on clients
-        super.writeData(view);
-    }
-    #endif
-    #if MC_VERSION < 12006
-    @Override
-    public NbtCompound toInitialChunkDataNbt() {
-        return createNbt();
-    }
-    #else
-    @Override
-    public NbtCompound toInitialChunkDataNbt(RegistryWrapper.WrapperLookup registryLookup) {
-        return createNbt(registryLookup);
-    }
-    #endif
-    @Override
-    public @Nullable Packet<ClientPlayPacketListener> toUpdatePacket() {
-        return BlockEntityUpdateS2CPacket.create(this);
+    protected void avlSaveAdditional(AVLDataOutput out) {
+        out.saveItems(this.items);
     }
 
-    #if MC_VERSION >= 12105
     @Override
-    public void onBlockReplaced(BlockPos pos, BlockState oldState) {
-        final ItemStack stack = this.items.getFirst();
-        if (!stack.isEmpty() && this.world != null) {
-            Block.dropStack(this.world, pos, stack);
-        }
-        super.onBlockReplaced(pos, oldState);
+    protected void avlLoadAdditional(AVLDataInput in) {
+        in.loadItems(this.items);
+        #if POLYMER storedItemDisplay.setItem(this.items.get(0)); #endif
+    }
+
+    @Override
+    #if MC_VERSION < 12006
+    // 1.20.1 - 1.20.4
+    public @NotNull CompoundTag getUpdateTag() {
+        return this.saveWithoutMetadata();
+    }
+    #else
+    // 1.20.6+
+    public @NotNull CompoundTag getUpdateTag(HolderLookup.Provider registries) {
+        return this.saveCustomOnly(registries);
     }
     #endif
+
+    @Override
+    public @Nullable Packet<ClientGamePacketListener> getUpdatePacket() {
+        return ClientboundBlockEntityDataPacket.create(this);
+    }
 
     // Required to block hoppers from working
     @Override
-    public int[] getAvailableSlots(Direction var1) { return new int[0]; }
+    public int @NotNull [] getSlotsForFace(Direction side) { return new int[0]; }
     @Override
-    public boolean canInsert(int slot, ItemStack stack, Direction direction) { return false; }
+    public boolean canPlaceItemThroughFace(int slot, ItemStack stack, @Nullable Direction side) { return false; }
     @Override
-    public boolean canExtract(int slot, ItemStack stack, Direction direction) { return false; }
+    public boolean canTakeItemThroughFace(int slot, ItemStack stack, Direction side) { return false; }
+
+
+    #if POLYMER
+    protected Quaternionf getCabinetRotation(BlockState state) {
+        Quaternionf rot = getBaseRotation(state);
+        rot.rotateZ((float) Math.PI);
+        return rot;
+    }
+    protected Quaternionf getBaseRotation(BlockState state) {
+        final float angle = getRotationNSSwap(state);
+        return new Quaternionf().rotationY(angle);
+    }
+    protected void applyTranslations(BlockState state, ItemDisplayElement cabDisplay, ItemDisplayElement itemDisplay) {
+        final Direction facing = state.getValue(BlockStateProperties.HORIZONTAL_FACING);
+
+        final float pushBack = 0.4525f;
+        final float itemPushBack = 0.41f;
+
+        final Vector3f cabTrans = new Vector3f(facing.getStepX() * -pushBack, 0, facing.getStepZ() * -pushBack);
+        final Vector3f itemTrans = new Vector3f(facing.getStepX() * -itemPushBack, 0, facing.getStepZ() * -itemPushBack);
+
+        cabDisplay.setTranslation(cabTrans);
+        itemDisplay.setTranslation(itemTrans);
+    }
+
+    //TODO: Check if the 4 overrides below are necessary
+
+    @Override
+    public void setItem(int slot, ItemStack stack) {
+        ImplementedInventory.super.setItem(slot, stack);
+        if (slot == 0) this.storedItemDisplay.setItem(stack);
+    }
+
+    @Override
+    public @NotNull ItemStack removeItem(int slot, int count) {
+        final ItemStack result = ImplementedInventory.super.removeItem(slot, count);
+        if (slot == 0) this.storedItemDisplay.setItem(getItems().get(0));
+        return result;
+    }
+
+    @Override
+    public @NotNull ItemStack removeItemNoUpdate(int slot) {
+        final ItemStack result = ImplementedInventory.super.removeItemNoUpdate(slot);
+        if (slot == 0) this.storedItemDisplay.setItem(ItemStack.EMPTY);
+        return result;
+    }
+
+    @Override
+    public void clearContent() {
+        ImplementedInventory.super.clearContent();
+        this.storedItemDisplay.setItem(ItemStack.EMPTY);
+    }
+
+    public void updateVisualState(boolean isOpen) {
+        if (isOpen) {
+            final #if MC_VERSION < 12104 PolymerModelData #elif MC_VERSION < 12111 ResourceLocation #else Identifier #endif openData =
+                    PolymerModelCache.CABINET_OPEN_MODELS.get(this.getBlockState().getBlock());
+            final ItemStack openStack = disguiseItem(openData);
+            this.cabinetDisplay.setItem(openStack);
+        } else {
+            this.cabinetDisplay.setItem(this.getBlockState().getBlock().asItem().getDefaultInstance());
+        }
+    }
+    #endif
 }
